# RealVectorFramework

./: BANNER.txt  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  arena_benchmarks.cpp  stack_vs_heap_benchmark.cpp
benchmarks/oop/: ConjugateGradients.hpp  Vector.hpp
cmake/: AddGTest.cmake
docs/: API_REFERENCE.md  BENCHMARKS.md  CPO_INTEGRATION_GUIDE.md
docs/api/: ALGORITHMS.md  CONCEPTS.md  MEMORY.md  OPERATIONS.md  README.md
examples/: CMakeLists.txt  conjugate_gradient.cpp  cpo_traits_example.cpp  hs1_advanced.cpp  hs1_gradient_descent.cpp  hs1_lbfgs.cpp  main.cpp  memory_arena_example.cpp  sherman_morrison.cpp  traits_vs_ranges.cpp  zakharov_example.cpp  zakharov_rvf.cpp  zakharov_truncated_cg.cpp  zakharov_truncated_cg_simple.cpp
examples/cpo_debug/: cpo_const_error.cpp
examples/generic_transformer/: CMakeLists.txt  generic_transformer.hpp  generic_transformer_demo.cpp
examples/transformer/: CMakeLists.txt  transformer.hpp  transformer_demo.cpp
examples/transformers/: CMakeLists.txt
examples/transformers/basic/: CMakeLists.txt  basic_transformer_demo.cpp
examples/transformers/generic/: generic_transformer.hpp
examples/transformers/sequence/: CMakeLists.txt  sequence_transformer.hpp  sequence_transformer_demo.cpp
include/: README.md  algorithms.hpp  objectives.hpp  operations.hpp  real_vector.hpp  rvf.hpp
include/algorithms/: conjugate_gradient.hpp  gradient_descent_bounds.hpp  sherman_morrison.hpp  truncated_cg.hpp
include/algorithms/linear_algebra/: conjugate_gradient.hpp  sherman_morrison.hpp
include/algorithms/optimization/: lbfgs.hpp  objective.hpp  problems.hpp
include/algorithms/optimization/line_search/: gradient_descent_bounds.hpp
include/algorithms/optimization/test_problems/: zakharov.hpp
include/algorithms/optimization/trust_region/: subproblem_solver.hpp  truncated_cg.hpp
include/core/: real_scalar.hpp  real_vector.hpp  rvf.hpp
include/core/cmath/: abs.hpp  cmath.hpp  exp.hpp  fma.hpp  fmax.hpp  fmin.hpp  fmod.hpp  pow.hpp  remainder.hpp  sqrt.hpp
include/core/type_support/: std_cpo_impl.hpp  std_ranges_support.hpp
include/core/type_support/cmath/: std_abs.hpp  std_exp.hpp  std_fma.hpp  std_fmax.hpp  std_fmin.hpp  std_fmod.hpp  std_overloads.hpp  std_pow.hpp  std_remainder.hpp  std_sqrt.hpp
include/objectives/: objective.hpp  zakharov.hpp
include/objectives/test_problems/: zakharov.hpp
include/operations/: add_in_place.hpp  arena_integration.hpp  axpy_in_place.hpp  binary_in_place.hpp  clone.hpp  deref_if_needed.hpp  dimension.hpp  inner_product.hpp  memory_arena.hpp  scale_in_place.hpp  std_cpo_impl.hpp  std_ranges_support.hpp  std_vector.hpp  unary_in_place.hpp  variadic_in_place.hpp
include/operations/advanced/: assign.hpp  axpy_in_place.hpp  binary_in_place.hpp  fill.hpp  l2norm.hpp  layer_norm.hpp  matvec.hpp  relu.hpp  self_map.hpp  softmax.hpp  unary_in_place.hpp  variadic_in_place.hpp
include/operations/core/: add_in_place.hpp  scale_in_place.hpp
include/operations/memory/: arena_integration.hpp  arena_observers.hpp  memory_arena.hpp
scripts/: banner_check.py
test/: CMakeLists.txt  clone_by_value_test.cpp  clone_shared_ptr_test.cpp  clone_unique_ptr_test.cpp  clone_weak_ptr_negative.cpp  main.cpp
